style: add media queries for large desktops

--- a/scss/partials/components/_buttons.scss
+++ b/scss/partials/components/_buttons.scss
@@ -54,4 +54,8 @@
         font-size: $font-size-xs;
         margin-top: 30px;
     }
+
+    @include screen(large) {
+        font-size: $font-size-s;
+    }
 }
