--- a/scss/partials/helpers/_variables.scss
+++ b/scss/partials/helpers/_variables.scss
@@ -27,10 +27,10 @@ $box-sizing: border-box;
 
 //Media query
 $mobile: '(min-width:360px)';
-$mobile-: '(min-width:360px)';
 $tablet: '(min-width:768px)';
 $desktop: '(min-width:1024px)';
 $big-desktop: '(min-width:1400px)';
+$large: '(min-width:1900px)';
 
 
 $orientation-landscape: "(orientation:landscape)";
