--- a/scss/partials/layout/_features.scss
+++ b/scss/partials/layout/_features.scss
@@ -38,6 +38,10 @@
         height: 100vh;
     }
 
+    @include screen(large) {
+        height: 90vh;
+    }
+
     &::before,
     &::after {
         content: '';
@@ -93,18 +97,30 @@
             @include screen(big-desktop) {
                 display: block;
             }
+
+            @include screen(large) {
+                height: 335px;
+            }
         }
 
         &::before {
             width: 142px;
             left: 30%;
             background-image: url(../img/woman1.png);
+
+            @include screen(large) {
+                width: 191px;
+            }
         }
 
         &::after {
             width: 177px;
             right: 30%;
             background-image: url(../img/woman2.png);
+
+            @include screen(large) {
+                width: 245px;
+            }
         }
     }
 
@@ -144,6 +160,10 @@
             height: 225px;
         }
 
+        @include screen(large) {
+            height: 300px;
+        }
+
         &-monitor {
             background-image: url(../img/monitor-illustration.png);
             width: 140px;
@@ -162,6 +182,10 @@
 
             @include screen(big-desktop) {
                 width: 273px;
+            }
+
+            @include screen(large) {
+                width: 369px;
             }
         }
 
@@ -184,6 +208,10 @@
             @include screen(big-desktop) {
                 width: 326px;
             }
+
+            @include screen(large) {
+                width: 436px;
+            }
         }
 
         &-satisfaction {
@@ -204,6 +232,10 @@
 
             @include screen(big-desktop) {
                 width: 213px;
+            }
+
+            @include screen(large) {
+                width: 286px;
             }
         }
     }
@@ -243,6 +275,10 @@
 
         @include screen(big-desktop) {
             font-size: $font-size-s;
+        }
+
+        @include screen(large) {
+            font-size: $font-size-m;
         }
 
         &--slide-in-from-right {
@@ -293,6 +329,10 @@
         @include screen(big-desktop) {
             font-size: $font-size-xxs;
             line-height: 1.5;
+        }
+
+        @include screen(large) {
+            font-size: $font-size-xs;
         }
 
         &--slide-in-from-right {
