--- a/scss/partials/layout/_footer.scss
+++ b/scss/partials/layout/_footer.scss
@@ -44,6 +44,10 @@
         font-size: $font-size-xs;
     }
 
+    @include screen(large) {
+        font-size: $font-size-s;
+    }
+
     &__link-mobile {
         @include flexbox;
         align-items: center;
@@ -59,6 +63,10 @@
 
         @include screen(big-desktop) {
             font-size: $font-size-s;
+        }
+
+        @include screen(large) {
+            font-size: $font-size-m;
         }
     }
 
@@ -118,6 +126,10 @@
 
         @include screen(big-desktop) {
             font-size: $font-size-xxs;
+        }
+
+        @include screen(large) {
+            font-size: $font-size-xs;
         }
     }
 }
