change font on large screens

--- a/scss/partials/layout/_about.scss
+++ b/scss/partials/layout/_about.scss
@@ -37,7 +37,7 @@
             right: 95%;
         }
 
-        @include screen(tablet) {
+        @include screen(large) {
             font-size: $font-size-xs;
         }
 
