--- a/scss/partials/layout/_navigation.scss
+++ b/scss/partials/layout/_navigation.scss
@@ -130,6 +130,7 @@
         -moz-transition: .5s ease-in-out;
         -o-transition: .5s ease-in-out;
         transition: .5s ease-in-out;
+        background-color: $color-white;
         cursor: pointer;
         z-index: 1;
         transform:
