add border radius to buttons

--- a/scss/partials/layout/_contact.scss
+++ b/scss/partials/layout/_contact.scss
@@ -432,6 +432,7 @@
         font-size: $font-size-xxs;
         color: $color-white;
         border: 0;
+        border-radius: 20px;
         padding: 5px 20px;
         transition: .15s background-color;
         cursor: pointer;
