--- a/scss/partials/layout/_services.scss
+++ b/scss/partials/layout/_services.scss
@@ -381,6 +381,7 @@
         font-size: $font-size-xxs;
         color: $color-white;
         border: 0;
+        border-radius: 20px;
         padding: 5px 20px;
         transform: translateY(-200%);
         transition: .15s background-color;
