--- a/scss/partials/components/_buttons.scss
+++ b/scss/partials/components/_buttons.scss
@@ -1,61 +1,61 @@
 .btn {
-    display: block;
-    position: relative;
-    padding: 15px 20px 10px;
-    margin-top: 10px;
-    border: 2px solid $color-secondary;
-    background-color: $color-white;
-    color: black;
-    font-weight: $normal;
-    text-align: left;
-    letter-spacing: 1px;
-    transition: .25s;
-    box-shadow: 0.6rem 0.6rem 0 0 $color-secondary, inset 0.6rem 0.6rem 0 $color-secondary;
-    cursor: pointer;
-    z-index: 1000;
+  display: block;
+  position: relative;
+  padding: 15px 20px 10px;
+  margin-top: 10px;
+  border: 2px solid $color-secondary;
+  background-color: $color-white;
+  color: $color-black;
+  font-weight: $normal;
+  text-align: left;
+  letter-spacing: 1px;
+  transition: 0.25s;
+  box-shadow: 0.6rem 0.6rem 0 0 $color-secondary,
+    inset 0.6rem 0.6rem 0 $color-secondary;
+  cursor: pointer;
+  z-index: 1000;
 
-    &:hover,
-    &:focus {
-        padding: 10px 20px;
-        color: $color-white;
-        box-shadow:
-            0 0 0 0 $color-secondary,
-            inset 12rem 7rem 0 0 $color-secondary, 0 0 10px lighten(black, 20%);
-
-        @include orientation(landscape) {
-            padding: 5px 15px;
-        }
-    }
+  &:hover,
+  &:focus {
+    padding: 10px 20px;
+    color: $color-white;
+    box-shadow: 0 0 0 0 $color-secondary, inset 12rem 7rem 0 0 $color-secondary,
+      0 0 10px lighten(black, 20%);
 
     @include orientation(landscape) {
-        padding: 10px 15px 5px;
+      padding: 5px 15px;
     }
+  }
 
-    @include screen(tablet) {
-        font-size: $font-size-s;
-        margin-top: 20px;
+  @include orientation(landscape) {
+    padding: 10px 15px 5px;
+  }
 
-        @include orientation(landscape) {
-            font-size: $font-size-xxs;
-        }
+  @include screen(tablet) {
+    font-size: $font-size-s;
+    margin-top: 20px;
+
+    @include orientation(landscape) {
+      font-size: $font-size-xxs;
     }
+  }
 
-    @include screen(desktop) {
-        font-size: $font-size-s;
-    }
+  @include screen(desktop) {
+    font-size: $font-size-s;
+  }
 
-    @include rwd(1365) {
-        @include orientation(landscape) {
-            font-size: $font-size-m;
-        }
+  @include rwd(1365) {
+    @include orientation(landscape) {
+      font-size: $font-size-m;
     }
+  }
 
-    @include screen(big-desktop) {
-        font-size: $font-size-xs;
-        margin-top: 30px;
-    }
+  @include screen(big-desktop) {
+    font-size: $font-size-xs;
+    margin-top: 30px;
+  }
 
-    @include screen(large) {
-        font-size: $font-size-s;
-    }
+  @include screen(large) {
+    font-size: $font-size-s;
+  }
 }
