--- a/scss/partials/helpers/_variables.scss
+++ b/scss/partials/helpers/_variables.scss
@@ -1,16 +1,11 @@
-// Colors
-// $color-primary: #497A80;
-$color-primary: #69C6EE;
-// $color-secondary: #89C5CC;
-$color-secondary: #3781A1;
+$color-primary: #69c6ee;
+$color-secondary: #3781a1;
 $color-white: #ffffff;
-//Typography
+$color-black: #000000;
+
 $base-font-size: 10px;
 $base-line-height: 20px;
-$base-font-family:"Asap",
-Helvetica,
-Arial,
-sans-serif;
+$base-font-family: "Asap", Helvetica, Arial, sans-serif;
 
 $font-size-xxs: 1.6rem;
 $font-size-xs: 2.2rem;
@@ -26,12 +21,11 @@ $bold: 700;
 $box-sizing: border-box;
 
 //Media query
-$mobile: '(min-width:360px)';
-$tablet: '(min-width:768px)';
-$desktop: '(min-width:1024px)';
-$big-desktop: '(min-width:1400px)';
-$large: '(min-width:1900px)';
-
+$mobile: "(min-width:360px)";
+$tablet: "(min-width:768px)";
+$desktop: "(min-width:1024px)";
+$big-desktop: "(min-width:1400px)";
+$large: "(min-width:1900px)";
 
 $orientation-landscape: "(orientation:landscape)";
 $orientation-portrait: "(orientation:portrait)";
