--- a/scss/partials/layout/_navigation.scss
+++ b/scss/partials/layout/_navigation.scss
@@ -1,382 +1,216 @@
 .nav {
-    height: 15vh;
+  height: 12vh;
+  width: 100%;
+  background-color: #fff;
+  position: fixed;
+  padding: 0 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  top: 0;
+  transition: background-color 0.1s ease-in-out;
+  z-index: 3;
+
+  @include orientation(landscape) {
+    height: 17vh;
+  }
+
+  @include screen(desktop) {
+    padding: 0 4%;
+    background-color: transparent;
+    opacity: 1;
+    height: 10vh;
+    &--after-scroll {
+      background-color: $color-white;
+      -webkit-box-shadow: 0px 5px 19px -18px rgba(66, 68, 90, 1);
+      -moz-box-shadow: 0px 5px 19px -18px rgba(66, 68, 90, 1);
+      box-shadow: 0px 5px 19px -18px rgba(66, 68, 90, 1);
+    }
+  }
+
+  &__logo {
+    width: 85px;
+    height: 85px;
+    background-image: url("../img/logo.png");
+    background-position: center;
+    background-size: cover;
+    transition: transform 0.1s ease 0.3s;
+    cursor: pointer;
+
+    @include orientation(landscape) {
+      width: 47px;
+      height: 50px;
+    }
+
+    @include screen(tablet) {
+      width: 120px;
+      height: 130px;
+
+      @include orientation(landscape) {
+        width: 53px;
+        height: 57px;
+      }
+    }
+
+    @include screen(desktop) {
+      width: 100px;
+      height: 110px;
+      transform: translateY(20px);
+      transition: transform 0.1s ease;
+
+      &--small {
+        transform: scale(0.7) translateY(0px);
+      }
+    }
+  }
+
+  &__menu {
+    width: 30px;
+    height: 20px;
+    border: none;
+    transition: 0.5s ease-in-out;
+    background-color: $color-white;
+    transform: rotate(0deg);
+
+    @include orientation(landscape) {
+      width: 25px;
+      height: 15px;
+    }
+
+    @include screen(tablet) {
+      width: 40px;
+      height: 30px;
+
+      @include orientation(landscape) {
+        width: 30px;
+        height: 20px;
+      }
+    }
+
+    @include screen(desktop) {
+      display: none;
+    }
+
+    & span {
+      display: block;
+      position: absolute;
+      height: 4px;
+      width: 100%;
+      background-color: black;
+      left: 0;
+      transform: rotate(0deg);
+      transition: 0.25s ease-in-out;
+    }
+
+    & span:nth-child(1) {
+      top: 0%;
+    }
+
+    & span:nth-child(2) {
+      top: 50%;
+    }
+
+    & span:nth-child(3) {
+      top: 100%;
+    }
+
+    &--is-open span:nth-child(1) {
+      top: 50%;
+      transform: rotate(135deg);
+    }
+
+    &--is-open span:nth-child(2) {
+      opacity: 0;
+      left: -60px;
+    }
+
+    &--is-open span:nth-child(3) {
+      top: 50%;
+      transform: rotate(-135deg);
+    }
+  }
+
+  &__list {
+    height: 90vh;
     width: 100%;
-    background-color: #fff;
-    position: fixed;
-    top: 0;
+    position: absolute;
+    top: 12vh;
     left: 0;
-    z-index: 2;
-    transition: height .3s ease-in-out, background-color .1s ease-in-out;
-    z-index: 3;
-
-    @include screen(mobile) {
-        @include orientation(landscape) {
-            height: 17vh;
-        }
-    }
-
-    @include screen(big-desktop) {
-        background-color: transparent;
-        opacity: 1;
-        height: 10vh;
-    }
-
-    &__logo {
-        width: 65px;
-        height: 70px;
-        position: absolute;
-        left: 8%;
-        top: calc((100% - 65px) / 2);
-        background-image: url('../img/logo.png');
-        background-position: center;
-        background-size: cover;
-        z-index: -3;
-        transition: transform .1s ease .3s;
-        cursor: pointer;
-
-        @include screen(mobile) {
-            width: 80px;
-            height: 85px;
-            top: calc((100% - 85px) / 2);
-
-            @include orientation(landscape) {
-                width: 47px;
-                height: 50px;
-                top: calc((100% - 50px) / 2);
-            }
-        }
-
-        @include screen(tablet) {
-            width: 120px;
-            height: 130px;
-            top: calc((100% - 130px) / 2);
-
-            @include orientation(landscape) {
-                width: 53px;
-                height: 57px;
-                top: calc((100% - 57px) / 2);
-            }
-        }
-
-        @include screen(desktop) {
-            width: 160px;
-            height: 170px;
-            top: calc((100% - 170px) / 2);
-
-            @include orientation(landscape) {
-                width: 100px;
-                height: 110px;
-                top: calc((100% - 110px) / 2);
-            }
-        }
-
-        @include rwd(1365) {
-            @include orientation(landscape) {
-                width: 140px;
-                height: 150px;
-                top: calc((100% - 150px) / 2);
-            }
-        }
-
-        @include screen(big-desktop) {
-            width: 100px;
-            height: 110px;
-            left: 4%;
-            top: calc((100% - 110px) / 2);
-            transform: translateY(25px);
-            transition: transform .1s ease;
-            -webkit-transition: transform .1s ease;
-            -moz-transition: transform .1s ease;
-            -ms-transition: transform .1s ease;
-            -o-transition: transform .1s ease;
-        }
-
-        &--is-open {
-            opacity: 0;
-            transform: scale(0);
-            -webkit-transform: scale(0);
-            -moz-transform: scale(0);
-            -ms-transform: scale(0);
-            -o-transform: scale(0);
-
-            @include screen(big-desktop) {
-                opacity: 1;
-                transform: scale(1) translateY(25px);
-                -webkit-transform: scale(1) translateY(25px);
-                -moz-transform: scale(1) translateY(25px);
-                -ms-transform: scale(1) translateY(25px);
-                -o-transform: scale(1) translateY(25px);
-            }
-        }
-
-        &--small {
-            transform: translateY(0) scale(0.6);
-            display: none;
-
-            @include screen(big-desktop) {
-                display: block;
-            }
-        }
-    }
-
-    &__menu {
-        width: 35px;
-        height: 25px;
-        position: fixed;
-        top: 7%;
-        right: 8%;
-        border: none;
-        -webkit-transition: .5s ease-in-out;
-        -moz-transition: .5s ease-in-out;
-        -o-transition: .5s ease-in-out;
-        transition: .5s ease-in-out;
-        background-color: $color-white;
-        cursor: pointer;
-        z-index: 1;
-        transform:
-            rotate(0deg);
-        -webkit-transform: rotate(0deg) translateY(-50%);
-
-        @include screen(mobile) {
-            @include orientation(landscape) {
-                width: 25px;
-                height: 15px;
-                top: 8%;
-            }
-        }
-
-        @include screen(tablet) {
-            width: 50px;
-            height: 40px;
-
-            @include orientation(landscape) {
-                width: 35px;
-                height: 25px;
-            }
-        }
-
-        @include screen(desktop) {
-            width: 60px;
-            height: 50px;
-
-            @include orientation(landscape) {
-                width: 50px;
-                height: 40px;
-            }
-        }
-
-        @include screen(big-desktop) {
-            display: none;
-        }
-
-        & span {
-            display: block;
-            position: absolute;
-            height: 4px;
-            width: 100%;
-            background-color: black;
-            opacity: 1;
-            left: 0;
-            -webkit-transform: rotate(0deg);
-            -moz-transform: rotate(0deg);
-            -o-transform: rotate(0deg);
-            transform: rotate(0deg);
-            -webkit-transition: .25s ease-in-out;
-            -moz-transition: .25s ease-in-out;
-            -o-transition: .25s ease-in-out;
-            transition: .25s ease-in-out;
-        }
-
-        & span:nth-child(1) {
-            top: 0%;
-        }
-
-        & span:nth-child(2) {
-            top: 50%;
-        }
-
-        & span:nth-child(3) {
-            top: 100%;
-        }
-
-        &--is-open span:nth-child(1) {
-            top: 50%;
-            -webkit-transform: rotate(135deg);
-            -moz-transform: rotate(135deg);
-            -o-transform: rotate(135deg);
-            transform: rotate(135deg);
-        }
-
-        &--is-open span:nth-child(2) {
-            opacity: 0;
-            left: -60px;
-        }
-
-        &--is-open span:nth-child(3) {
-            top: 50%;
-            -webkit-transform: rotate(-135deg);
-            -moz-transform: rotate(-135deg);
-            -o-transform: rotate(-135deg);
-            transform: rotate(-135deg);
-        }
-    }
-
-    &__list {
-        pointer-events: none;
-        height: 60%;
-        width: 60%;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        @include flexbox;
-        flex-direction: column;
-        align-items: center;
-        justify-content: space-around;
-        padding: 10px 0;
-        margin-top: 25px;
-        border: 2px solid #000;
-        font-size: $font-size-xxs;
-        opacity: 0;
-        transform: translate(-50%, -50%);
-        -webkit-transform: translate(-50%, -50%);
-        -moz-transform: translate(-50%, -50%);
-        -ms-transform: translate(-50%, -50%);
-        -o-transform: translate(-50%, -50%);
-
-        @include screen(mobile) {
-            font-size: $font-size-xs;
-
-            @include orientation(landscape) {
-                height: 40%;
-                width: 85%;
-                margin-top: 0;
-                flex-direction: row;
-                font-size: $font-size-xxs;
-            }
-        }
-
-        @include screen(tablet) {
-            font-size: $font-size-s;
-
-            @include orientation(landscape) {
-                font-size: $font-size-xxs;
-            }
-        }
-
-        @include screen(desktop) {
-            font-size: $font-size-m;
-
-            @include orientation(landscape) {
-                font-size: $font-size-s;
-            }
-        }
-
-        @include screen(big-desktop) {
-            flex-direction: row;
-            opacity: 1;
-            border: none;
-            margin-top: 0;
-            font-size: $font-size-xxs;
-            background-color: $color-white;
-            height: 100%;
-            width: 45%;
-            left: 73%;
-            padding: 0;
-            pointer-events: auto;
-        }
-
-        @include screen(large) {
-            font-size: $font-size-xs;
-        }
-
-        &--is-open {
-            pointer-events: auto;
-            animation: fadeIn 1s .3s both;
-            -webkit-animation: fadeIn 1s .3s both;
-
-            @include screen (big-desktop) {
-                animation: none;
-                -webkit-animation: none;
-            }
-
-        }
-    }
-
-    &__item {
-        width: 100%;
-        height: 100%;
-        @include flexbox;
-        align-items: center;
-        justify-content: center;
-    }
-
-    &__link {
-        padding: 20px 40px;
-        text-decoration: none;
-        color: #000;
-
-        @include orientation(landscape) {
-            padding: 5px 5px;
-        }
-
-        @include screen(desktop) {
-            padding: 20px 30px;
-        }
-
-        &:hover {
-            color: $color-primary;
-        }
-
-        &-mobile {
-            @include flexbox;
-            flex-direction: column;
-            align-items: center;
-
-            &--clicked {
-                padding: 0;
-            }
-        }
-    }
-
-    &__icon {
-        font-size: $font-size-s;
-        position: relative;
-
-        &-number {
-            display: none;
-            text-align: center;
-            bottom: 0;
-            right: 5px;
-            font-size: $font-size-xxs;
-            opacity: 1;
-
-            &--is-selected {
-                display: block;
-            }
-        }
-
-        @include screen (mobile) {
-            font-size: $font-size-m;
-        }
-
-        @include screen (desktop) {
-            font-size: $font-size-l;
-        }
-
-        @include screen (big-desktop) {
-            font-size: $font-size-s;
-        }
-
-        @include screen(large) {
-            font-size: $font-size-m;
-        }
-    }
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    padding: 80px 0 120px;
+    background-color: $color-white;
+    font-size: $font-size-xs;
+    display: none;
 
     &--is-open {
-        height: 100vh;
-
-        @include screen (big-desktop) {
-            height: 10vh;
-        }
+      display: flex;
+      animation: slideInFromRight 0.5s both;
     }
+
+    &--is-closed {
+      display: flex;
+      animation: slideToRight 0.5s;
+    }
+
+    @include orientation(landscape) {
+      top: 17vh;
+      height: 83vh;
+    }
+
+    @include screen(desktop) {
+      padding: 0;
+      display: flex;
+      flex-direction: row;
+      border: none;
+      font-size: $font-size-xxs;
+      height: 100%;
+      width: 35%;
+      right: 0;
+      top: 0;
+      position: relative;
+    }
+
+    @include screen(large) {
+      font-size: $font-size-xs;
+    }
+  }
+
+  &__item {
+    @include orientation(landscape) {
+      padding: 10px 5px;
+    }
+  }
+
+  &__link {
+    padding: 20px 40px;
+    text-decoration: none;
+    color: #000;
+
+    @include orientation(landscape) {
+      padding: 20px 5px;
+    }
+
+    @include screen(desktop) {
+      padding: 20px 10px;
+    }
+
+    &:hover {
+      color: $color-primary;
+    }
+  }
+
+  &__icon {
+    font-size: $font-size-m;
+
+    @include screen(desktop) {
+      font-size: $font-size-s;
+    }
+
+    @include screen(large) {
+      font-size: $font-size-m;
+    }
+  }
 }
