--- a/scss/partials/layout/_navigation.scss
+++ b/scss/partials/layout/_navigation.scss
@@ -10,6 +10,9 @@
   top: 0;
   transition: background-color 0.1s ease-in-out;
   z-index: 3;
+  -webkit-box-shadow: 0px 5px 19px -18px rgba(66, 68, 90, 1);
+  -moz-box-shadow: 0px 5px 19px -18px rgba(66, 68, 90, 1);
+  box-shadow: 0px 5px 19px -18px rgba(66, 68, 90, 1);
 
   @include orientation(landscape) {
     height: 17vh;
@@ -20,6 +23,7 @@
     background-color: transparent;
     opacity: 1;
     height: 10vh;
+    box-shadow: none;
     &--after-scroll {
       background-color: $color-white;
       -webkit-box-shadow: 0px 5px 19px -18px rgba(66, 68, 90, 1);
@@ -150,11 +154,6 @@
       animation: slideInFromRight 0.5s both;
     }
 
-    &--is-closed {
-      display: flex;
-      animation: slideToRight 0.5s;
-    }
-
     @include orientation(landscape) {
       top: 17vh;
       height: 83vh;
@@ -167,10 +166,11 @@
       border: none;
       font-size: $font-size-xxs;
       height: 100%;
-      width: 35%;
+      width: 45%;
       right: 0;
       top: 0;
       position: relative;
+      animation: none;
     }
 
     @include screen(large) {
